--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "server.js" }]
+  "builds": [{ "src": "server.js", "use": "@vercel/node" },
+  { "src": "/(.*)", "use": "@vercel/static" }],
+  "routes": [{ "src": "/(.*)", "dest": "server.js" },
+  { "src": ".*", "use": "index.html" }]
 }
