--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,40 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.js", "use": "@vercel/node" },
-  { "src": "/(.*)", "use": "@vercel/static" }],
-  "routes": [{ "src": "/(.*)", "dest": "server.js" },
-  { "src": ".*", "use": "index.html" }]
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/gestion-demande",
+      "dest": "server.js"
+    },
+    {
+      "src": "/etat_civil.html",
+      "dest": "server.js"
+    },
+    {
+      "src": "/login",
+      "dest": "server.js"
+    },
+    {
+      "src": "/",
+      "dest": "index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "index.html"
+    }
+  ]
+  
 }
